fix: Fixed the context of the build api dockerfile to reuse the environment file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3"
 services:
   api:
     build:
-      context: services/api/
-      dockerfile: ../../.docker/golang/Dockerfile
+      context: .
+      dockerfile: .docker/golang/Dockerfile
     ports:
       - "${API_PORT}:${API_PORT}"
     image: "bot_api"
