--- a/.docker/golang/Dockerfile
+++ b/.docker/golang/Dockerfile
@@ -4,17 +4,20 @@ RUN apk add gcc libc-dev
 
 WORKDIR /go/src/app
 
-COPY go.mod .
-COPY go.sum .
+COPY services/api/go.mod .
+COPY services/api/go.sum .
 
 RUN go mod download
 
-COPY . .
+COPY services/api/ .
+
 RUN CGO_ENABLED=1 GOOS=linux go build -tags musl -o bin/app cmd/main.go
 
 FROM golang:1.17.1-alpine
-COPY --from=build /go/src/app/bin/app .
+WORKDIR /
+COPY .env /
+COPY --from=build /go/src/app/bin/app /
 
 EXPOSE 8070
 
-CMD [ "./app", "-env=false" ]
+CMD [ "/app", "-env=false" ]
