fix: Changed base image for api execution

--- a/.docker/golang/Dockerfile
+++ b/.docker/golang/Dockerfile
@@ -13,7 +13,7 @@ COPY services/api/ .
 
 RUN CGO_ENABLED=1 GOOS=linux go build -tags musl -o bin/app cmd/main.go
 
-FROM golang:1.17.1-alpine
+FROM alpine:latest
 WORKDIR /
 COPY .env /
 COPY --from=build /go/src/app/bin/app /
