fix: Some naming fixes and environment variables for configuration files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,27 @@ services:
     build:
       context: .
       dockerfile: .docker/golang/Dockerfile
-    ports:
-      - "${API_PORT}:${API_PORT}"
-    image: "bot_api"
-    container_name: "bot_api"
+    image: ${API_NAME}
+    container_name: ${API_NAME}
     environment:
       - CHANNEL_NAME=${API_CHANNEL_NAME}
       - BOT_OAUTH_TOKEN=${API_BOT_OAUTH_TOKEN}
       - BOT_USERNAME=${API_BOT_USERNAME}
       - IRC_URL=${API_IRC_URL}
       - IRC_PORT=${API_IRC_PORT}
+      - PGSQL_HOST=${PGSQL_NAME}
+      - REDIS_HOST=${REDIS_NAME}
+      - KAFKA_URL=${KAFKA_NAME}
+    depends_on:
+      - postgres
+      - redis
+      - kafka
+    ports:
+      - "${API_PORT}:${API_PORT}"
   postgres:
     build:
       context: .
       dockerfile: .docker/postgres/Dockerfile
-    ports:
-      - "${PGSQL_PORT}:${PGSQL_PORT}"
     image: ${PGSQL_NAME}
     container_name: ${PGSQL_NAME}
     environment:
@@ -28,6 +33,11 @@ services:
       - POSTGRES_DB=${PGSQL_DBNAME}
       - POSTGRES_USER=${PGSQL_USER}
       - POSTGRES_PASSWORD=${PGSQL_PASSWORD}
+    ports:
+      - "${PGSQL_PORT}:${PGSQL_PORT}"
+    volumes:
+      - "${PGSQL_DATA}:${PGSQL_DATA}"
+      - "./.docker/postgres/conf/pg_hba.conf:${PGSQL_DATA}/pg_hba.conf"
   redis:
     build:
       context: .
@@ -50,7 +60,7 @@ services:
       - zookeeper
     environment:
       KAFKA_ZOOKEEPER_CONNECT: "${ZOOKEEPER_SERVICE}:${ZOOKEEPER_PORT}"
-      KAFKA_ADVERTISED_HOST_NAME: "localhost"
+      KAFKA_ADVERTISED_HOST_NAME: "${KAFKA_NAME}"
       KAFKA_ADVERTISED_PORT: "${KAFKA_PORT}"
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
     depends_on:
