--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,15 @@ API_IRC_SSL_URL=irc.chat.twitch.tv
 API_IRC_SSL_PORT=6697
 
 API_PORT=5000
+API_NAME=bot-api
+
 PGSQL_HOST=localhost
 PGSQL_PORT=5432
 PGSQL_USER=root
 PGSQL_PASSWORD=root
 PGSQL_DBNAME=project
 PGSQL_NAME=bot-postgres
+PGSQL_DATA=/var/lib/postgresql/data
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
